edit navigation bar

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
+  - title: Home
+    url: /
   - title: Publications
     url: /publications/
   #- title: Others
