--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ owner:
   linkedin: congqianhao
   google_scholar: BoyWviYAAAAJ
   #github: cong741
+  #cv: CV.pdf
 # Analytics and webmaster tools stuff goes here
 #google_analytics: UA-52736040-1
 #google_verify:
