--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              //cong741.github.io
 
 # Owner/author information
 owner:
-  name:           Cong Qianhao (从乾昊)
+  name:           Cong Qianhao
   avatar:         congqianhao.jpg
   bio:            Ph.D. Student @ NUS
   location:       Singapore
