--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
   email:          CongQianhao@outlook.com
 
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  #twitter: CQianhao
+  twitter: CQianhao
   linkedin: congqianhao
   google_scholar: BoyWviYAAAAJ
   #github: cong741
