--- a/_config.yml
+++ b/_config.yml
@@ -11,18 +11,18 @@ url:              //cong741.github.io
 owner:
   name:           Cong Qianhao
   avatar:         congqianhao.jpg
-  bio:            Ph.D. Student @ NUS
+  bio:            Ph.D. @ NUS
   location:       Singapore
   email:          CongQianhao@outlook.com
 
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  #twitter: CQianhao
+  twitter: PolluxCG
   linkedin: congqianhao
   google_scholar: BoyWviYAAAAJ
   #github: cong741
   #cv: CV.pdf
 # Analytics and webmaster tools stuff goes here
-#google_analytics: UA-52736040-1
+google_analytics: k87ZBMddmC_ECwKqGSiLNIyvrXXsn3DOzfJ8TWbe2fA
 #google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
