--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ cnlinks:
     url: /zh-CN
   - title: 论文发表
     url: /zh-CN/publications
-  - title: 英文
+  - title: English
     url: /
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
