--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url:              //cong741.github.io
 #http://localhost:5000
 #https://www.ardasnck.github.io
 #disqus_shortname: ardasnck
+#update
 
 # Owner/author information
 owner:
